# Crzgames_RCNETCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dependencies.txt
.github/: dependabot.yml
.github/workflows/: build_deploy_production.yml  build_deploy_staging.yml  deploy-release.yml
build-scripts/generate-example/: linux.sh
build-scripts/generate-lib/: linux.sh
cmake/: setup_dependencies.cmake
docs/: README.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/src/: index.md
docs/src/fr/: index.md
docs/src/fr/api/: rc2d_audio.md  rc2d_collision.md  rc2d_event.md  rc2d_filesystem.md  rc2d_graphics.md  rc2d_image.md  rc2d_system.md
docs/src/fr/guides/: assets.md  icons.md  testing.md
docs/src/fr/guides/development/: dependencies.md  development-cycle.md
docs/src/fr/projects/: android.md  ios.md
docs/src/guides/: distribution.md  testing.md
docs/src/guides/development/: development-cycle.md  updating-dependencies.md
docs/src/guides/getting-started/: prerequisites.md  quick-start.md
example/include/: server.h
example/src/: main.c  main.cpp  server.c  server.cpp
include/RCNET/: RCNET.h  RCNET_data.h  RCNET_engine.h  RCNET_jwt.h  RCNET_logger.h  RCNET_nats.h
src/RCNET/: RCNET_data.cpp  RCNET_engine.c  RCNET_engine.cpp  RCNET_jwt.cpp  RCNET_logger.c  RCNET_nats.c  RCNET_nats.cpp  RCNET_redis.cpp
